package com.Accommodation.dto;

import jakarta.validation.constraints.*;
import lombok.Getter;
import lombok.Setter;

import java.time.LocalDate;
import java.time.temporal.ChronoUnit;

@Getter
@Setter
public class OrderDto {

    @NotNull(message = "숙소 ID는 필수입니다.")
    private Long accomId;

    @NotNull(message = "체크인 날짜는 필수입니다.")
    private LocalDate checkInDate;

    @NotNull(message = "체크아웃 날짜는 필수입니다.")
    private LocalDate checkOutDate;

    /** 성인 수 (최소 1명) */
    @Min(value = 1, message = "성인은 최소 1명 이상이어야 합니다.")
    private int adultCount = 1;

    /** 아동 수 (0명 이상) */
    @Min(value = 0, message = "아동 수는 0명 이상이어야 합니다.")
    private int childCount = 0;

    /** 객실 수 (최소 1실) */
    @Min(value = 1, message = "객실 수는 최소 1실 이상이어야 합니다.")
    private int roomCount = 1;

    /** 총 투숙 인원 */
    public int getTotalGuestCount() {
        return adultCount + childCount;
    }

    /** 박 수 (checkInDate ~ checkOutDate) */
    public int getCount() {
        if (checkInDate == null || checkOutDate == null) return 0;
        return (int) ChronoUnit.DAYS.between(checkInDate, checkOutDate);
    }
}
